aks-signmypdf.workers.convertpdf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-convertpdf-convertpdf
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: signmypdf-convertpdf
  template:
    metadata:
      labels:
        app: signmypdf-convertpdf
    spec:
      containers:
        - name: signmypdf-convertpdf
          image: signmypdfacr.azurecr.io/signmypdf.workers.convertpdf:#{Build.BuildId}#
      imagePullSecrets:
        - name: acr-secret
