aks-mongodb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    version: prod
    product: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo:4.4
          imagePullPolicy: ""
          name: mongodb
          ports:
            - containerPort: 27017
      restartPolicy: Always
status: {}
