hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
    - hosts:
        - www.e-signpdf.com
        - e-signpdf.com
      secretName: tls-secret
  rules:
    - host: www.e-signpdf.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-signmypdf-web
                port:
                  number: 80
